--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,13 +35,16 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_riverpod: ^2.6.1
-  intl: 0.20.1
+  intl: 0.19.0
   go_router: ^16.0.0
   responsive_framework: ^1.5.1
   google_fonts: ^6.3.1
   phosphor_flutter: ^2.1.0
   desktop_drop: ^0.6.1
   file_picker: ^10.3.3
+  syncfusion_flutter_pdf: ^27.1.48
+  docx_to_text: ^1.0.1
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
