--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,10 @@ dependencies:
   firebase_ai: ^3.2.0
   firebase_app_check: ^0.4.0+1
   firebase_core: ^4.1.0
-  
+  # PDF Export dependencies
+  pdf: ^3.11.1
+  printing: ^5.13.4
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
