feat: firebase auth email and pass, google & anynoumous & fix: Tweaked some UI

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,9 +45,13 @@ dependencies:
   syncfusion_flutter_pdf: ^27.1.48
   docx_to_text: ^1.0.1
   path: ^1.9.0
+  google_sign_in: ^7.1.1
+  google_sign_in_web: ^1.0.0
+  #FIREBASE
   firebase_ai: ^3.2.0
   firebase_app_check: ^0.4.0+1
   firebase_core: ^4.1.0
+  firebase_auth: ^6.0.2
   # PDF Export dependencies
   pdf: ^3.11.1
   printing: ^5.13.4
