--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,6 @@ dependencies:
   file_picker: ^10.3.3
   syncfusion_flutter_pdf: ^27.1.48
   docx_to_text: ^1.0.1
-  path: ^1.9.0
   google_sign_in: ^7.1.1
   google_sign_in_web: ^1.0.0
   #FIREBASE
@@ -59,8 +58,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  flutter_lints: ^5.0.0
+  flutter_lints: ^4.0.0
+  mocktail: ^1.0.3
 
 flutter:
   generate: true
