--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>969900702891-tskc3h92gdf676b6vo2v6vkd43pqfg50.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.969900702891-tskc3h92gdf676b6vo2v6vkd43pqfg50</string>
 	<key>API_KEY</key>
 	<string>AIzaSyBi19aCb1nudKnmhdSqbdaOlJWfd9iQEYk</string>
 	<key>GCM_SENDER_ID</key>
